<resources>
    <string name="app_name">Справочник</string>
    <string name="beast">Животные</string>
    <string name="flovers">Растения</string>
    <string name="guitar">Guitar</string>
    <string name="drums">Drums</string>
    <string name="piano">Piano</string>
    <string name="todo">TODO</string>
    <string name="text">text</string>
    <string name="vorobei">Vorobei</string>
    <string name="acoustic_piano">Acoustic piano</string>
    <string name="accordion">Accordion</string>
    <string name="keyboard_instruments">Keyboard instruments</string>
    <string name="synthesizers">Synthesizers</string>
    <string name="small_drum">Small drum</string>
    <string name="big_drum">Big drum</string>
    <string name="system_drum">System drum</string>
    <string name="bass_guitar">Bass guitar</string>
    <string name="acoustic_guitar">Acoustic guitar</string>
    <string name="electric_guitar">Electric guitar</string>
    <string name="musical_instrument">Musical instrument</string>
    <string name="music_sets">Music sets</string>
    <string name="electric_guitar1">
        An electric guitar is a guitar that requires external
        amplification in order to be heard at typical performance volumes,
        unlike a standard acoustic guitar.
    </string>
    <string name="acoustic_guitar1">
        An acoustic guitar is a musical instrument in the string family.
        When a string is plucked its vibration is transmitted from the bridge,
        resonating throughout the top of the guitar.
    </string>
    <string name="bass_guitar1">
        The bass guitar, electric bass or simply bass, is the lowest-pitched member of the guitar family.
        It is a plucked string instrument similar in appearance and construction to an electric or an acoustic guitar.
    </string>
    <string name="small_drum1">
        The drum is a member of the percussion group of musical instruments.
        In the Hornbostel-Sachs classification system, it is a membranophone.
    </string>
    <string name="big_drum1">
        Big Drum is a genre and a musical instrument from the Windward Islands.
        It is a kind of Caribbean music, associated mostly closely with the music of
        Saint Vincent and the Grenadines,Music of Guadeloupe.
    </string>
    <string name="system_drum1">
        A drum set – also called a drum kit, trap set
        an abbreviation of the word "contraption" or simply drums – is a collection of drums,
        cymbals and other percussion instruments.
    </string>
    <string name="synthesizers1">
        A synthesizer (also spelled synthesiser) is an electronic musical instrument that generates audio signals.
        Synthesizers generate audio through methods including subtractive synthesis, additive synthesis.
    </string>
    <string name="acoustic_piano1">
        The piano is an acoustic, keyboard and stringed musical instrument invented in
        Italy by Bartolomeo Cristofori around the year 1700 (the exact year is uncertain).
    </string>
    <string name="accordion1">
        Accordions (from 19th-century German Akkordeon, from Akkord—"musical chord, concord of sounds")
        are a family of box-shaped musical instruments
        of the bellows-driven free-reed aerophone type.
    </string>

</resources>